--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html xmlns:sec="http://www.thymeleaf.org"
-      xmlns:th="http://www.thymeleaf.org"
->
+      xmlns:th="http://www.thymeleaf.org">
 <head>
 
 </head>
 <body>
 <div th:fragment="nav">
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-            <div sec:authorize="isAuthenticated()">
-                Hello <span sec:authentication="name"></span> !
-                <form method="post" th:action="@{/logout}">
-                    <input type="submit" value="Log out">
-                </form>
-            </div>
-            <div sec:authorize="!isAuthenticated()">
-                <a class="btn" th:href="@{/login}">Log in</a>
-                <a class="btn" th:href="@{/user/form}">Sign in</a>
-            </div>
+        <div sec:authorize="isAuthenticated()">
+            Hello <span sec:authentication="name"></span> !
+            <form method="post" th:action="@{/logout}">
+                <input type="submit" value="Log out">
+            </form>
+        </div>
+        <div sec:authorize="isAnonymous()">
+            <a class="btn" th:href="@{/login}">Log in</a>
+            <a class="btn" th:href="@{/user/form}">Sign in</a>
         </div>
     </nav>
 </div>
