--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
-<html xmlns:sec="http://www.thymeleaf.org"
+<html layout:decorate="~{layouts/main-layout}"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns:th="http://www.thymeleaf.org">
 <head>
 
 </head>
 <body>
 <div th:fragment="nav">
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-        <div sec:authorize="isAuthenticated()">
-            Hello <span sec:authentication="name"></span> !
-            <form method="post" th:action="@{/logout}">
-                <input type="submit" value="Log out">
-            </form>
+
+    <!-- Sidebar -->
+    <div class="bg-light border-right" id="sidebar-wrapper">
+        <div class="sidebar-heading">Recipe Manager</div>
+        <div class="list-group list-group-flush">
+            <a th:href="@{/}" class="list-group-item list-group-item-action bg-light">Recipes</a>
         </div>
-        <div sec:authorize="isAnonymous()">
-            <a class="btn" th:href="@{/login}">Log in</a>
-            <a class="btn" th:href="@{/user/form}">Sign in</a>
-        </div>
-    </nav>
+    </div>
+    <!-- /#sidebar-wrapper -->
+
 </div>
 </body>
 </html>
