prepare entities for recipe and ingredients

--- a/src/main/resources/static/css/simple-sidebar.css
+++ b/src/main/resources/static/css/simple-sidebar.css
@@ -41,6 +41,7 @@ body {
   #page-content-wrapper {
     min-width: 0;
     width: 100%;
+    padding-right: 15rem;
   }
 
   #wrapper.toggled #sidebar-wrapper {
