few minor changes with entities and views

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,7 +1,17 @@
 .recipe-title {
     text-align: center;
+    margin-top: 1rem;
 }
 
 .image-center {
     text-align: center;
+}
+
+.recipe-panel {
+    margin-top: 1rem;
+    padding: 30px;
+}
+
+.recipe-panel-hover:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
