--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,12 +9,14 @@
 <div layout:fragment="content">
 
     <div class="row">
-        <div class="col-4 image-center" th:each="recipe : ${recipes}">
-            <img height="250" th:attr="src=@{'/image/'+${recipe.image}}"
-                 th:onerror="'this.src=\'' + @{/img/default.jpg} + '\';'"
-                 width="250"/>
-            <div>
-                <p class="recipe-title" th:text="${recipe.title}"></p>
+        <div class="col-4 image-center recipe-panel" th:each="recipe : ${recipes}">
+            <div class="recipe-panel-hover">
+                <img height="250" th:attr="src=@{'/img/'+${recipe.image}}"
+                     th:onerror="'this.src=\'' + @{/img/default.jpg} + '\';'"
+                     width="250"/>
+                <div>
+                    <p class="recipe-title" th:text="${recipe.title}"></p>
+                </div>
             </div>
         </div>
     </div>
