--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" th:href="@{/css/style.css}" type="text/css">
 
     <!-- JS, Popper.js, and jQuery -->
+    <script th:src="@{/js/main.js}"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
             crossorigin="anonymous"></script>
