--- a/src/main/resources/templates/recipe-form.html
+++ b/src/main/resources/templates/recipe-form.html
@@ -15,22 +15,39 @@
                 </div>
             </tr>
             <tr>
-                <td>Title:</td>
+                <td>Title*:</td>
                 <td><input th:field="*{title}" type="text"></td>
             </tr>
             <tr>
-                <td>Directions*:</td>
+                <td>Directions**:</td>
                 <td><textarea cols="100" rows="10" th:field="*{directions}"></textarea></td>
             </tr>
             <tr>
-                <td>File</td>
+                <td>File:</td>
                 <td><input name="file" type="file"></td>
+            </tr>
+
+            <tr>
+                <td>Ingredients:</td>
+                <td>
+                    <ul id="ingredients-ul">
+                        <li>
+                            <input type="text" name="ingredient-li" placeholder="Ingredient">
+                            <input type="number" name="amount-li" placeholder="Amount" value="0" step="0.01">
+                            <input type="text" name="unit-li" placeholder="Unit">
+                        </li>
+                    </ul>
+                    <input type="button" value="Add field" class="add_form_field" onclick="addItem()">
+                </td>
             </tr>
             <tr>
                 <td><input type="submit" value="Submit"></td>
             </tr>
             <tr>
-                <td>* (max 8000 characters)</td>
+                <td>*Cannot be empty.</td>
+            </tr>
+            <tr>
+                <td>**Cannot be empty (max 8000 characters).</td>
             </tr>
         </table>
     </form>
