--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -66,3 +66,10 @@ ul li input {
 .delete-update-form {
     display: inline;
 }
+
+.recipe-information {
+    font-size: 70%;
+    color: gray;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
