--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -73,3 +73,13 @@ ul li input {
     margin-top: 20px;
     margin-bottom: 20px;
 }
+
+.search-results {
+    margin: auto;
+    display: table;
+}
+
+.search_header {
+    text-align: center;
+    font-size: 3rem;
+}
