add favourite recipes functionality

--- a/src/main/resources/templates/recipe-details.html
+++ b/src/main/resources/templates/recipe-details.html
@@ -58,6 +58,26 @@
                           target="_blank">
                         <input class="btn btn-info" type="submit" value="PDF">
                     </form>
+                    <form th:if="${!isFavourite}" class="delete-update-form" th:action="@{'/recipe/' + ${recipe.id} + '/favourite'}"
+                          th:method="post">
+                        <button type="submit" class="btn btn-secondary">
+                            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart-fill"
+                                 fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd"
+                                      d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
+                            </svg>
+                        </button>
+                    </form>
+                    <form th:if="${isFavourite}" class="delete-update-form" th:action="@{'/recipe/' + ${recipe.id} + '/favourite'}"
+                          th:method="post">
+                        <button type="submit" class="btn btn-secondary">
+                            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart-fill"
+                                 fill="red" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd"
+                                      d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
+                            </svg>
+                        </button>
+                    </form>
                 </div>
                 <div sec:authorize="hasAuthority('USER')" th:if="${recipe.author.username} == ${#authentication.name}">
                     <form class="delete-update-form" th:action="@{'/recipe/' + ${recipe.id} + '/delete'}"
@@ -71,6 +91,26 @@
                     <form class="delete-update-form" th:action="@{'/recipe/' + ${recipe.id} + '/pdf'}" th:method="post"
                           target="_blank">
                         <input class="btn btn-info" type="submit" value="PDF">
+                    </form>
+                    <form th:if="${!isFavourite}" class="delete-update-form" th:action="@{'/recipe/' + ${recipe.id} + '/favourite'}"
+                          th:method="post">
+                        <button type="submit" class="btn btn-secondary">
+                            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart-fill"
+                                 fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd"
+                                      d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
+                            </svg>
+                        </button>
+                    </form>
+                    <form th:if="${isFavourite}" class="delete-update-form" th:action="@{'/recipe/' + ${recipe.id} + '/favourite'}"
+                          th:method="post">
+                        <button type="submit" class="btn btn-secondary">
+                            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart-fill"
+                                 fill="red" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd"
+                                      d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
+                            </svg>
+                        </button>
                     </form>
                 </div>
                 <div sec:authorize="isAnonymous()">
