--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -20,7 +20,13 @@
                th:classappend="${#httpServletRequest.getRequestURI().startsWith('/my-recipes') ? 'active-page' : ' '}"
                th:href="@{/my-recipes/page/1}" class="list-group-item list-group-item-action bg-light">My Recipes</a>
             <a sec:authorize="isAuthenticated()" href="#" class="list-group-item list-group-item-action bg-light">My
-                Cookbook</a>
+                Cookbook
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart-fill" fill="red"
+                     xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd"
+                          d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
+                </svg>
+            </a>
             <a href="#" class="list-group-item list-group-item-action bg-light">Advanced Search</a>
         </div>
     </div>
