--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -19,7 +19,7 @@
             <a sec:authorize="isAuthenticated()"
                th:classappend="${#httpServletRequest.getRequestURI().startsWith('/my-recipes') ? 'active-page' : ' '}"
                th:href="@{/my-recipes/page/1}" class="list-group-item list-group-item-action bg-light">My Recipes</a>
-            <a sec:authorize="isAuthenticated()" href="#" class="list-group-item list-group-item-action bg-light">My
+            <a sec:authorize="isAuthenticated()" th:href="@{/cookbook/page/1}" class="list-group-item list-group-item-action bg-light">My
                 Cookbook
                 <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart-fill" fill="red"
                      xmlns="http://www.w3.org/2000/svg">
