working on advanced search functionality

--- a/src/main/resources/templates/advanced-search.html
+++ b/src/main/resources/templates/advanced-search.html
@@ -9,7 +9,7 @@
 <body>
 <div layout:fragment="content">
     <h2>Insert ingredients which you want in your meal:</h2>
-    <form th:method="post" th:action="@{advanced-search/results}" enctype="multipart/form-data">
+    <form th:method="post" th:action="@{/advanced-search/results/page/1}" enctype="multipart/form-data">
         <table>
             <tr>
                 <td>Ingredients:</td>
