--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -30,7 +30,7 @@
                 </svg>
             </a>
             <a th:classappend="${#httpServletRequest.getRequestURI().startsWith('/advanced-search') ? 'active-page' : ' '}"
-               th:href="@{/advanced-search}" class="list-group-item list-group-item-action bg-light">Advanced Search</a>
+               th:href="@{/advanced-search/}" class="list-group-item list-group-item-action bg-light">Advanced Search</a>
         </div>
     </div>
     <!-- /#sidebar-wrapper -->
