--- a/src/main/resources/templates/recipe-details.html
+++ b/src/main/resources/templates/recipe-details.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <div layout:fragment="content">
+<!--    todo: fix redirect in advanced search-->
     <div th:if="${redirected == null}">
         <a class="btn" href="#" onclick="window.history.go(-1); return false;">
             <svg class="bi bi-arrow-left-short" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
