--- a/src/main/resources/templates/advanced-search-results.html
+++ b/src/main/resources/templates/advanced-search-results.html
@@ -8,7 +8,28 @@
 </head>
 <body>
 <div layout:fragment="content">
-    Results
+<!--    todo: option to back to the advanced search options-->
+    <div class="row">
+        <div class="col-4 image-center recipe-panel" th:each="recipe : ${recipes}">
+            <a th:href="@{'/recipe/'+${recipe.id}}">
+                <div class="recipe-panel-hover">
+                    <img height="250" th:attr="src=@{'/img/'+${recipe.image}}"
+                         th:onerror="'this.src=\'' + @{/img/default.jpg} + '\';'"
+                         width="250"/>
+                    <div>
+                        <p class="recipe-title" th:text="${recipe.title}"></p>
+                    </div>
+                </div>
+            </a>
+        </div>
+    </div>
+    <ul style="text-align: center;" th:if="${pages > 1}">
+        <th:block th:each="i: ${#numbers.sequence(1, pages)}">
+            <a th:href="@{'/advanced-search/results/page/' + ${i}}"
+               th:style="${i} == ${page} ? 'color: black; font-weight: bold;' : ''"
+               th:text="${i}"></a>
+        </th:block>
+    </ul>
 </div>
 </body>
 </html>
