--- a/src/main/resources/templates/recipe-details.html
+++ b/src/main/resources/templates/recipe-details.html
@@ -122,7 +122,7 @@
                 </div>
             </div>
             <div>
-                <ul class="list-group" th:each="ingredient : ${recipe.ingredient}">
+                <ul class="list-group" th:each="ingredient : ${recipe.ingredients}">
                     <li class="list-group-item"
                         th:text="${ingredient.amount} + ' - ' + ${ingredient.unit} + ' - ' + ${ingredient.ingredientName}"></li>
                 </ul>
