--- a/src/main/resources/templates/recipe-update-form.html
+++ b/src/main/resources/templates/recipe-update-form.html
@@ -34,7 +34,7 @@
                 <td>Ingredients:</td>
                 <td>
                     <ul id="ingredients-ul">
-                        <li th:each="ingre : ${recipe.ingredient}">
+                        <li th:each="ingre : ${recipe.ingredients}">
                             <input type="text" name="ingredient-li" placeholder="Ingredient" th:value="${ingre.ingredientName}">
                             <input type="number" name="amount-li" placeholder="Amount" step="0.01" th:value="${ingre.amount}">
                             <input type="text" name="unit-li" placeholder="Unit" th:value="${ingre.unit}">
